syntax = "proto3";

package example;

import "gin/proto/gin.proto";

service Example {
  rpc echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
  string echo = 1;
  // use string or bytes depending on feature uuid_string/uuid_bytes
  // the string representation takes 34 bytes while the bytes representation has a max of 22 bytes
  bytes request_id = 2 [(gin_tonic.v1.rust_type) = "uuid::Uuid"];
}

message EchoResponse {
  message Echo {
    string echo = 1;
    uint32 ip = 2 [(gin_tonic.v1.rust_type) = "std::net::Ipv4Addr"];
  }
  message Error {
    uint32 code = 1;
  }

  oneof outcome {
    Echo echo = 1;
    Error error = 2;
  }
}